# Scribe_finance

./: .gitignore  LICENSE  Q&A_finance.xlsx  Q&A_finance_and_others (beta version).20250422-1601.xlsx  Q&A_finance_and_others (beta version).20251020-2141.xlsx  README.md  aggregate_results.py  convert_excel2json.py  eval.sh  evaluate.py  excel_to_json.py  generation.py  group.py  group_evaluation.py  model_evaluation.sh  model_setup.sh  pyproject.toml  run.sh  run_me.sh  run_model.sh
dataset_json/: Q&A_finance_and_others (beta version).20250422-1601.dataset_charts.json  Q&A_finance_and_others (beta version).20250422-1601.dataset_tables.json  Q&A_finance_and_others (beta version).20251021-1055.dataset_tables.json
dataset_json.v0.8/: Q&A_finance_and_others (beta version).20250422-1601.dataset_NER.json  Q&A_finance_and_others (beta version).20250422-1601.dataset_special_cases.json
dataset_json_20251020-2141/: Q&A_finance_and_others (beta version).20251020-2141.dataset_NER.json  Q&A_finance_and_others (beta version).20251020-2141.dataset_calculs_conversation.json  Q&A_finance_and_others (beta version).20251020-2141.dataset_charts.json  Q&A_finance_and_others (beta version).20251020-2141.dataset_special_cases.json  Q&A_finance_and_others (beta version).20251020-2141.dataset_tables.json  Q&A_finance_and_others (beta version).20251020-2141.dataset_tables_YN_TF_paraphrase.json
dataset_json_20251021-1055/: Q&A_finance_and_others (beta version).20251021-1055.dataset_NER.json  Q&A_finance_and_others (beta version).20251021-1055.dataset_calculs_conversation.json  (+3 more)
utils/: ner.py  (+9 more)
(+243 files in other folders)
